--- a/DCS.Alternative.Launcher/Windows/MainWindow.xaml
+++ b/DCS.Alternative.Launcher/Windows/MainWindow.xaml
@@ -5,10 +5,12 @@
         xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="DCS Alternative Launcher"
-        Width="1024"
-        Height="600"
-        MaxWidth="1024"
-        MaxHeight="600"
+        Width="1300"
+        Height="675"
+        MinWidth="1300"
+        MinHeight="675"
+        MaxWidth="1300"
+        MaxHeight="675"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         mc:Ignorable="d">
@@ -28,7 +30,7 @@
                    Stretch="UniformToFill" />
             <Image Width="250"
                    Height="150"
-                   Margin="30"
+                   Margin="50"
                    HorizontalAlignment="Right"
                    VerticalAlignment="Bottom"
                    RenderOptions.BitmapScalingMode="HighQuality"
