--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
@@ -195,7 +195,7 @@
                                                         <Button Command="{Binding DataContext.EditViewportsCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
                                                                 CommandParameter="{Binding}"
                                                                 Content="EDIT" />
-                                                        <Button Command="{Binding DataContext.DeleteViewportsCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
+                                                        <Button Command="{Binding DataContext.RemoveModuleViewportCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
                                                                 CommandParameter="{Binding}"
                                                                 Content="DELETE" />
                                                     </StackPanel>
