Fixed viewport saving from the designer. Added monitor overlay to monitors with no active designer

--- a/DCS.Alternative.Launcher/Plugins/Settings/Dialogs/ViewportEditorWindow.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Dialogs/ViewportEditorWindow.xaml
@@ -15,10 +15,11 @@
         launcher:WindowAssist.ViewModel="{Binding}"
         AllowsTransparency="True"
         Background="Transparent"
+        Topmost="True"
         WindowStyle="None"
         mc:Ignorable="d">
     <i:Interaction.Behaviors>
-        <behaviors:DialogResultBehavior Value="{Binding DialogResult.Value}" />
+        <behaviors:DialogResultBehavior IsDialog="False" Value="{Binding DialogResult.Value}" />
     </i:Interaction.Behaviors>
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
