#11 Open URLs in users default browser when the URL is not embed

--- a/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Game/Views/GameView.xaml
@@ -74,7 +74,8 @@
                             BorderBrush="#FF2F2F2F"
                             BorderThickness="1">
 
-                        <cef:ChromiumWebBrowser HorizontalAlignment="Stretch"
+                        <cef:ChromiumWebBrowser x:Name="Browser"
+                                                HorizontalAlignment="Stretch"
                                                 VerticalAlignment="Stretch"
                                                 Address="{Binding LatestYouTubeUrl.Value}"
                                                 Background="Black" />
