Comment out debugging code that was causing issues. Code Cleanup Version upgrade

--- a/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
+++ b/DCS.Alternative.Launcher/Plugins/Settings/Views/SettingsView.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:controls="clr-namespace:DCS.Alternative.Launcher.Controls"
+             xmlns:controls1="clr-namespace:DCS.Alternative.Launcher.Plugins.Settings.Views.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:data="clr-namespace:DCS.Alternative.Launcher.Data"
              xmlns:fluentWpf="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
@@ -94,163 +95,7 @@
                             <controls:InstallationControl Margin="30" />
                         </TabItem>
                         <TabItem Header="VIEWPORTS">
-                            <Grid Margin="30">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-                                <TextBlock Margin="0,0,0,10"
-                                           Text="Need to come up with a description on what to do here"
-                                           TextWrapping="Wrap" />
-
-                                <Border Grid.Row="1"
-                                        Background="#40000000"
-                                        BorderBrush="#FF2F2F2F"
-                                        BorderThickness="1" />
-                                <ListView Grid.Row="1"
-                                          Background="Transparent"
-                                          BorderThickness="0"
-                                          ItemsSource="{Binding ModuleViewports}"
-                                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                          SelectedItem="{Binding SelectedModuleViewport.Value, Mode=TwoWay}">
-                                    <ListView.ItemContainerStyle>
-                                        <Style TargetType="ListViewItem">
-                                            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                                            <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                                        </Style>
-                                    </ListView.ItemContainerStyle>
-                                    <ListView.ItemTemplate>
-                                        <DataTemplate DataType="{x:Type models:ModuleViewportModel}">
-                                            <Grid>
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="75" />
-                                                    <ColumnDefinition />
-                                                </Grid.ColumnDefinitions>
-
-                                                <Image Width="75"
-                                                       Height="75"
-                                                       VerticalAlignment="Center"
-                                                       Source="{Binding Module.Value.IconPath}"
-                                                       Stretch="Uniform" />
-
-                                                <Grid Grid.Column="1" Margin="0,7">
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="Auto" />
-                                                        <RowDefinition Height="Auto" />
-                                                    </Grid.RowDefinitions>
-                                                    <Grid.ColumnDefinitions>
-                                                        <ColumnDefinition />
-                                                        <ColumnDefinition Width="Auto" />
-                                                    </Grid.ColumnDefinitions>
-                                                    <TextBlock Grid.Row="0"
-                                                               Margin="0,0,0,0"
-                                                               FontFamily="{StaticResource Prototype}"
-                                                               FontSize="16"
-                                                               Foreground="#FFFFFFFF">
-                                                        <Run Text="{Binding Module.Value.DisplayName, Mode=OneWay}" />
-                                                    </TextBlock>
-                                                    <ItemsControl Grid.Row="1"
-                                                                  Grid.Column="0"
-                                                                  Margin="0"
-                                                                  Padding="0"
-                                                                  HorizontalAlignment="Stretch"
-                                                                  HorizontalContentAlignment="Stretch"
-                                                                  Background="Transparent"
-                                                                  BorderBrush="Transparent"
-                                                                  ItemsSource="{Binding Viewports}"
-                                                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                                                        <ItemsControl.ItemsPanel>
-                                                            <ItemsPanelTemplate>
-                                                                <WrapPanel />
-                                                            </ItemsPanelTemplate>
-                                                        </ItemsControl.ItemsPanel>
-                                                        <ItemsControl.ItemContainerStyle>
-                                                            <Style TargetType="ContentPresenter">
-                                                                <Setter Property="HorizontalAlignment" Value="Stretch" />
-                                                                <Setter Property="Margin" Value="0,0,2,2" />
-                                                            </Style>
-                                                        </ItemsControl.ItemContainerStyle>
-                                                        <ItemsControl.ItemTemplate>
-                                                            <DataTemplate>
-                                                                <StackPanel Orientation="Horizontal">
-                                                                    <Border Height="20"
-                                                                            Padding="4,2"
-                                                                            HorizontalAlignment="Center"
-                                                                            VerticalAlignment="Center"
-                                                                            Background="#FF1C1C1C"
-                                                                            Cursor="Hand">
-                                                                        <TextBlock FontFamily="{StaticResource Prototype}"
-                                                                                   FontSize="12"
-                                                                                   Foreground="White"
-                                                                                   Text="{Binding ViewportName}" />
-                                                                    </Border>
-                                                                </StackPanel>
-                                                            </DataTemplate>
-                                                        </ItemsControl.ItemTemplate>
-                                                    </ItemsControl>
-                                                    <StackPanel Grid.Row="0"
-                                                                Grid.RowSpan="2"
-                                                                Grid.Column="1">
-                                                        <Button Command="{Binding DataContext.EditViewportsCommand, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"
-                                                                CommandParameter="{Binding}"
-                                                                Content="EDIT" />
-                                                    </StackPanel>
-                                                </Grid>
-                                            </Grid>
-                                        </DataTemplate>
-                                    </ListView.ItemTemplate>
-                                </ListView>
-                                <Button Grid.Row="2"
-                                        Height="30"
-                                        Padding="3"
-                                        HorizontalAlignment="Left"
-                                        VerticalAlignment="Bottom"
-                                        Background="#FF006F00"
-                                        Command="{Binding GenerateMonitorConfigCommand}">
-                                    <TextBlock FontFamily="{StaticResource Prototype}"
-                                               FontSize="16"
-                                               Text="GENERATE MONITOR CONFIG">
-                                        <TextBlock.Effect>
-                                            <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                        </TextBlock.Effect>
-                                    </TextBlock>
-                                </Button>
-                                <StackPanel Grid.Row="2"
-                                            HorizontalAlignment="Right"
-                                            Orientation="Horizontal">
-                                    <Button Width="30"
-                                            Height="30"
-                                            Padding="3"
-                                            HorizontalAlignment="Left"
-                                            VerticalAlignment="Bottom"
-                                            Background="#6F1C00C6"
-                                            Command="{Binding AddModuleViewportCommand}">
-                                        <TextBlock FontFamily="{StaticResource Prototype}"
-                                                   FontSize="16"
-                                                   Text="+">
-                                            <TextBlock.Effect>
-                                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                            </TextBlock.Effect>
-                                        </TextBlock>
-                                    </Button>
-                                    <Button Width="30"
-                                            Height="30"
-                                            Padding="3"
-                                            HorizontalAlignment="Left"
-                                            VerticalAlignment="Bottom"
-                                            Background="#6F1C00C6"
-                                            Command="{Binding RemoveModuleViewportCommand}">
-                                        <TextBlock FontFamily="{StaticResource Prototype}"
-                                                   FontSize="15"
-                                                   Text="-">
-                                            <TextBlock.Effect>
-                                                <DropShadowEffect BlurRadius="8" ShadowDepth="0" />
-                                            </TextBlock.Effect>
-                                        </TextBlock>
-                                    </Button>
-                                </StackPanel>
-                            </Grid>
+                            <controls1:ViewportsSettingsControl Margin="30" />
                         </TabItem>
                     </TabControl.Items>
                 </TabControl>
